Fix overflow of the row

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -143,6 +143,10 @@ h6 {
   color: rgba(255, 255, 255, 0.7) !important;
 }
 
+.row {
+  overflow: hidden;
+}
+
 @media (max-width: 479px) {
   .btn {
     align-self: center;
@@ -692,7 +696,7 @@ img.d-flex.mr-3 {
 
 .page-footer .footer-links li {
   display: inline-block;
-  padding-right: 20px;
+  padding-right: 0.5rem;
   margin: 6px 0;
   cursor: pointer;
 }
