--- a/assets/css/sass/includes/_all.scss
+++ b/assets/css/sass/includes/_all.scss
@@ -152,6 +152,10 @@
 
 }
 
+.row {
+    overflow: hidden;
+}
+
 @media (max-width: 479px) {
     .btn {
         align-self: center;
@@ -310,6 +314,7 @@ img.d-flex.mr-3 {
     position: relative;
     padding-top: 39px !important;
 }
+
 
 .block-nw-editors-pick,
 .block-nw-home-featured-more,
@@ -702,7 +707,7 @@ img.d-flex.mr-3 {
 
 .page-footer .footer-links li {
     display: inline-block;
-    padding-right: 20px;
+    padding-right: 0.5rem;
     margin: 6px 0;
     cursor: pointer;
 }
@@ -718,6 +723,7 @@ img.d-flex.mr-3 {
 }
 
 @media (max-width: 767px) {
+
     .block-nw-magazine {
         position: relative;
     }
@@ -763,7 +769,7 @@ img.d-flex.mr-3 {
         position: absolute;
         top: 0;
         left: 0;
-        right:0;
+        right: 0;
     }
 }
 
